chore(release):Publish
 - @uqds/accordion@3.0.0
 - @uqds/alert@3.0.0
 - @uqds/app-maps@0.3.0
 - @uqds/blockquote@2.0.0
 - @uqds/body@0.3.0
 - @uqds/breadcrumb@4.0.0
 - @uqds/button@0.3.0
 - @uqds/card@0.3.0
 - @uqds/core@1.2.5
 - @uqds/footer@3.0.0
 - @uqds/footer-legacy@0.1.5
 - @uqds/form@0.3.0
 - @uqds/grid@0.0.20
 - @uqds/grid-menu@0.3.0
 - @uqds/header@3.0.0
 - @uqds/header-legacy@0.3.0
 - @uqds/hero@3.0.0
 - @uqds/icon@0.2.0
 - @uqds/image@2.0.0
 - @uqds/layout@3.0.0
 - @uqds/lists@0.1.5
 - @uqds/loading-spinner@0.3.0
 - @uqds/navigation@3.0.0
 - @uqds/page-header@0.1.5
 - @uqds/pagination@0.1.5
 - @uqds/pane@0.3.0
 - @uqds/pill@2.0.0
 - @uqds/previous-next@0.3.0
 - private-design-output@0.2.0
 - @uqds/progression@0.1.5
 - @uqds/sections@0.3.0
 - @uqds/side-nav@0.3.0
 - @uqds/site-header@3.0.0
 - @uqds/social@2.0.0
 - storybook-html@3.0.0
 - @uqds/table@0.3.0
 - @uqds/tabs@0.3.0

--- a/packages/app-maps/package.json
+++ b/packages/app-maps/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/app-maps",
-  "version": "0.1.4-alpha.2",
+  "version": "0.3.0",
   "description": "Application stylesheets for UQ Maps",
   "private": true,
   "keywords": [
@@ -43,8 +43,8 @@
   },
   "dependencies": {
     "@material/circular-progress": "^14.0.0",
-    "@uqds/body": "^0.1.4-alpha.2",
-    "@uqds/core": "^1.2.4-alpha.0"
+    "@uqds/body": "^0.3.0",
+    "@uqds/core": "^1.2.5"
   },
   "devDependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
