--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/accordion",
-  "version": "1.2.0-alpha.2",
+  "version": "3.0.0",
   "description": "Accordion component",
   "keywords": [
     "uqds",
@@ -45,8 +45,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0",
-    "@uqds/icon": "^0.1.0-alpha.0"
+    "@uqds/core": "^1.2.5",
+    "@uqds/icon": "^0.2.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
