--- a/packages/alert/package.json
+++ b/packages/alert/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/alert",
-  "version": "1.3.0-alpha.1",
+  "version": "3.0.0",
   "description": "Alert component",
   "keywords": [
     "uqds",
@@ -41,9 +41,9 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0",
-    "@uqds/grid": "^0.0.19-alpha.0",
-    "@uqds/icon": "^0.1.0-alpha.0"
+    "@uqds/core": "^1.2.5",
+    "@uqds/grid": "^0.0.20",
+    "@uqds/icon": "^0.2.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
