--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/button",
-  "version": "0.2.0-alpha.1",
+  "version": "0.3.0",
   "description": "The button component package",
   "keywords": [
     "uqds",
@@ -51,7 +51,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0",
+    "@uqds/core": "^1.2.5",
     "copy-to-clipboard": "^3.3.3"
   }
 }
