--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/card",
-  "version": "0.1.4-alpha.2",
+  "version": "0.3.0",
   "description": "Card components",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0",
-    "@uqds/icon": "^0.1.0-alpha.0",
-    "@uqds/layout": "^1.1.0-alpha.0"
+    "@uqds/core": "^1.2.5",
+    "@uqds/icon": "^0.2.0",
+    "@uqds/layout": "^3.0.0"
   }
 }
