--- a/packages/pane/package.json
+++ b/packages/pane/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/pane",
-  "version": "0.2.0-alpha.0",
+  "version": "0.3.0",
   "description": "Pane component",
   "keywords": [
     "uqds",
@@ -41,7 +41,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0",
-    "@uqds/layout": "^1.1.0-alpha.0"
+    "@uqds/core": "^1.2.5",
+    "@uqds/layout": "^3.0.0"
   }
 }
