--- a/packages/side-nav/package.json
+++ b/packages/side-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/side-nav",
-  "version": "0.1.4-alpha.2",
+  "version": "0.3.0",
   "description": "Side nav (title, side navigation)",
   "keywords": [
     "uqds",
@@ -40,7 +40,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0",
-    "@uqds/icon": "^0.1.0-alpha.0"
+    "@uqds/core": "^1.2.5",
+    "@uqds/icon": "^0.2.0"
   }
 }
