--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/table",
-  "version": "0.1.4-alpha.1",
+  "version": "0.3.0",
   "description": "The table component package",
   "keywords": [
     "uqds",
@@ -40,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.4-alpha.0"
+    "@uqds/core": "^1.2.5"
   }
 }
