--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/breadcrumb",
-  "version": "4.0.0",
+  "version": "5.0.0-alpha.0",
   "description": "Breadcrumb component",
   "keywords": [
     "uqds",
@@ -51,7 +51,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.5",
-    "@uqds/icon": "^0.2.0"
+    "@uqds/core": "^2.0.0-alpha.0",
+    "@uqds/icon": "^1.0.0-alpha.0"
   }
 }
