--- a/packages/footer-legacy/package.json
+++ b/packages/footer-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer-legacy",
-  "version": "0.1.5",
+  "version": "1.0.0-alpha.0",
   "description": "The UQ footer component package",
   "private": true,
   "keywords": [
@@ -35,7 +35,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.5",
-    "@uqds/grid": "^0.0.20"
+    "@uqds/core": "^2.0.0-alpha.0",
+    "@uqds/grid": "^1.0.0-alpha.0"
   }
 }
