--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/form",
-  "version": "0.3.0",
+  "version": "1.0.0-alpha.0",
   "description": "Form element style rules",
   "keywords": [
     "uqds",
@@ -53,7 +53,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.5",
-    "@uqds/icon": "^0.2.0"
+    "@uqds/core": "^2.0.0-alpha.0",
+    "@uqds/icon": "^1.0.0-alpha.0"
   }
 }
