--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/grid",
-  "version": "0.0.20",
+  "version": "1.0.0-alpha.0",
   "description": "Grid CSS",
   "keywords": [
     "uqds",
@@ -40,6 +40,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.5"
+    "@uqds/core": "^2.0.0-alpha.0"
   }
 }
