--- a/packages/header-legacy/package.json
+++ b/packages/header-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header-legacy",
-  "version": "0.3.0",
+  "version": "1.0.0-alpha.0",
   "description": "Header component",
   "private": true,
   "keywords": [
@@ -35,8 +35,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.5",
-    "@uqds/grid": "^0.0.20",
-    "@uqds/icon": "^0.2.0"
+    "@uqds/core": "^2.0.0-alpha.0",
+    "@uqds/grid": "^1.0.0-alpha.0",
+    "@uqds/icon": "^1.0.0-alpha.0"
   }
 }
