--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "3.0.0",
+  "version": "4.0.0-alpha.0",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -37,10 +37,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.5",
-    "@uqds/form": "^0.3.0",
-    "@uqds/grid": "^0.0.20",
-    "@uqds/icon": "^0.2.0"
+    "@uqds/core": "^2.0.0-alpha.0",
+    "@uqds/form": "^1.0.0-alpha.0",
+    "@uqds/grid": "^1.0.0-alpha.0",
+    "@uqds/icon": "^1.0.0-alpha.0"
   },
   "devDependencies": {
     "gulp": "^5.0.0"
