--- a/packages/sections/package.json
+++ b/packages/sections/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/sections",
-  "version": "0.3.0",
+  "version": "1.0.0-alpha.0",
   "description": "page sections",
   "keywords": [
     "uqds",
@@ -41,6 +41,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^1.2.5"
+    "@uqds/core": "^2.0.0-alpha.0"
   }
 }
