--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@uqds/accordion": "^4.0.0-alpha.0",
+    "@uqds/acknowledgement-statement": "^0.0.1-alpha.0",
     "@uqds/core": "^2.0.0-alpha.0",
     "@uqds/grid": "^1.0.0-alpha.0",
     "@uqds/icon": "^1.0.0-alpha.0"
