--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -1,6 +1,6 @@
 {
   "name": "private-design-output",
-  "version": "0.2.0",
+  "version": "1.0.0-alpha.4",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -29,36 +29,36 @@
     "gulp": "^5.0.0"
   },
   "dependencies": {
-    "@uqds/accordion": "^3.0.0",
-    "@uqds/alert": "^3.0.0",
-    "@uqds/blockquote": "^2.0.0",
-    "@uqds/body": "^0.3.0",
-    "@uqds/breadcrumb": "^4.0.0",
-    "@uqds/button": "^0.3.0",
-    "@uqds/card": "^0.3.0",
-    "@uqds/core": "^1.2.5",
-    "@uqds/footer": "^3.0.0",
-    "@uqds/footer-legacy": "^0.1.5",
-    "@uqds/form": "^0.3.0",
-    "@uqds/grid": "^0.0.20",
-    "@uqds/grid-menu": "^0.3.0",
-    "@uqds/header": "^3.0.0",
-    "@uqds/header-legacy": "^0.3.0",
-    "@uqds/hero": "^3.0.0",
-    "@uqds/icon": "^0.2.0",
-    "@uqds/layout": "^3.0.0",
-    "@uqds/lists": "^0.1.5",
-    "@uqds/loading-spinner": "^0.3.0",
-    "@uqds/navigation": "^3.0.0",
-    "@uqds/page-header": "^0.1.5",
-    "@uqds/pagination": "^0.1.5",
-    "@uqds/pane": "^0.3.0",
-    "@uqds/previous-next": "^0.3.0",
-    "@uqds/progression": "^0.1.5",
-    "@uqds/sections": "^0.3.0",
-    "@uqds/side-nav": "^0.3.0",
-    "@uqds/site-header": "^3.0.0",
-    "@uqds/table": "^0.3.0",
-    "@uqds/tabs": "^0.3.0"
+    "@uqds/accordion": "^4.0.0-alpha.0",
+    "@uqds/alert": "^4.0.0-alpha.1",
+    "@uqds/blockquote": "^3.0.0-alpha.0",
+    "@uqds/body": "^1.0.0-alpha.0",
+    "@uqds/breadcrumb": "^5.0.0-alpha.0",
+    "@uqds/button": "^1.0.0-alpha.0",
+    "@uqds/card": "^1.0.0-alpha.3",
+    "@uqds/core": "^2.0.0-alpha.0",
+    "@uqds/footer": "^4.0.0-alpha.0",
+    "@uqds/footer-legacy": "^1.0.0-alpha.0",
+    "@uqds/form": "^1.0.0-alpha.0",
+    "@uqds/grid": "^1.0.0-alpha.0",
+    "@uqds/grid-menu": "^1.0.0-alpha.0",
+    "@uqds/header": "^4.0.0-alpha.0",
+    "@uqds/header-legacy": "^1.0.0-alpha.0",
+    "@uqds/hero": "^4.0.0-alpha.0",
+    "@uqds/icon": "^1.0.0-alpha.0",
+    "@uqds/layout": "^4.0.0-alpha.3",
+    "@uqds/lists": "^1.0.0-alpha.0",
+    "@uqds/loading-spinner": "^1.0.0-alpha.0",
+    "@uqds/navigation": "^4.0.0-alpha.0",
+    "@uqds/page-header": "^1.0.0-alpha.0",
+    "@uqds/pagination": "^1.0.0-alpha.0",
+    "@uqds/pane": "^1.0.0-alpha.3",
+    "@uqds/previous-next": "^1.0.0-alpha.0",
+    "@uqds/progression": "^1.0.0-alpha.0",
+    "@uqds/sections": "^1.0.0-alpha.0",
+    "@uqds/side-nav": "^1.0.0-alpha.0",
+    "@uqds/site-header": "^4.0.0-alpha.0",
+    "@uqds/table": "^1.0.0-alpha.0",
+    "@uqds/tabs": "^1.0.0-alpha.0"
   }
 }
