chore(release):Publish
 - @uqds/accordion@5.0.0
 - @uqds/alert@5.0.0
 - @uqds/app-maps@2.0.0
 - @uqds/blockquote@4.0.0
 - @uqds/body@2.0.0
 - @uqds/breadcrumb@6.0.0
 - @uqds/button@2.0.0
 - @uqds/card@2.0.0
 - @uqds/core@3.0.0
 - @uqds/footer@5.0.0
 - @uqds/footer-legacy@2.0.0
 - @uqds/form@2.0.0
 - @uqds/grid@2.0.0
 - @uqds/grid-menu@2.0.0
 - @uqds/header@5.0.0
 - @uqds/header-legacy@2.0.0
 - @uqds/hero@5.0.0
 - @uqds/icon@2.0.0
 - @uqds/image@4.0.0
 - @uqds/layout@5.0.0
 - @uqds/lists@2.0.0
 - @uqds/loading-spinner@2.0.0
 - @uqds/navigation@5.0.0
 - @uqds/page-header@2.0.0
 - @uqds/pagination@2.0.0
 - @uqds/pane@2.0.0
 - @uqds/pill@4.0.0
 - @uqds/previous-next@2.0.0
 - private-design-output@2.0.0
 - @uqds/progression@2.0.0
 - @uqds/sections@2.0.0
 - @uqds/side-nav@2.0.0
 - @uqds/site-header@5.0.0
 - @uqds/social@4.0.0
 - storybook-html@5.0.0
 - @uqds/table@2.0.0
 - @uqds/tabs@2.0.0

--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/image",
-  "version": "3.0.0-alpha.1",
+  "version": "4.0.0",
   "description": "Image components",
   "keywords": [
     "uqds",
@@ -51,7 +51,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^2.0.0-alpha.0",
+    "@uqds/core": "^3.0.0",
     "swiper": "^11.1.15"
   }
 }
