--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/card",
-  "version": "1.0.0-alpha.3",
+  "version": "2.0.0",
   "description": "Card components",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^2.0.0-alpha.0",
-    "@uqds/icon": "^1.0.0-alpha.0",
-    "@uqds/layout": "^4.0.0-alpha.3"
+    "@uqds/core": "^3.0.0",
+    "@uqds/icon": "^2.0.0",
+    "@uqds/layout": "^5.0.0"
   }
 }
