--- a/packages/hero/package.json
+++ b/packages/hero/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/hero",
-  "version": "4.0.0-alpha.0",
+  "version": "5.0.0",
   "description": "Hero component",
   "keywords": [
     "uqds",
@@ -41,8 +41,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/button": "^1.0.0-alpha.0",
-    "@uqds/core": "^2.0.0-alpha.0",
-    "@uqds/grid": "^1.0.0-alpha.0"
+    "@uqds/button": "^2.0.0",
+    "@uqds/core": "^3.0.0",
+    "@uqds/grid": "^2.0.0"
   }
 }
