--- a/packages/loading-spinner/package.json
+++ b/packages/loading-spinner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/loading-spinner",
-  "version": "1.0.0-alpha.0",
+  "version": "2.0.0",
   "description": "Loading spinner component",
   "keywords": [
     "uqds",
@@ -40,7 +40,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^2.0.0-alpha.0",
-    "@uqds/icon": "^1.0.0-alpha.0"
+    "@uqds/core": "^3.0.0",
+    "@uqds/icon": "^2.0.0"
   }
 }
