--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -1,6 +1,6 @@
 {
   "name": "private-design-output",
-  "version": "1.0.0-alpha.4",
+  "version": "2.0.0",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -29,36 +29,36 @@
     "gulp": "^5.0.0"
   },
   "dependencies": {
-    "@uqds/accordion": "^4.0.0-alpha.0",
-    "@uqds/alert": "^4.0.0-alpha.1",
-    "@uqds/blockquote": "^3.0.0-alpha.0",
-    "@uqds/body": "^1.0.0-alpha.0",
-    "@uqds/breadcrumb": "^5.0.0-alpha.0",
-    "@uqds/button": "^1.0.0-alpha.0",
-    "@uqds/card": "^1.0.0-alpha.3",
-    "@uqds/core": "^2.0.0-alpha.0",
-    "@uqds/footer": "^4.0.0-alpha.0",
-    "@uqds/footer-legacy": "^1.0.0-alpha.0",
-    "@uqds/form": "^1.0.0-alpha.0",
-    "@uqds/grid": "^1.0.0-alpha.0",
-    "@uqds/grid-menu": "^1.0.0-alpha.0",
-    "@uqds/header": "^4.0.0-alpha.0",
-    "@uqds/header-legacy": "^1.0.0-alpha.0",
-    "@uqds/hero": "^4.0.0-alpha.0",
-    "@uqds/icon": "^1.0.0-alpha.0",
-    "@uqds/layout": "^4.0.0-alpha.3",
-    "@uqds/lists": "^1.0.0-alpha.0",
-    "@uqds/loading-spinner": "^1.0.0-alpha.0",
-    "@uqds/navigation": "^4.0.0-alpha.0",
-    "@uqds/page-header": "^1.0.0-alpha.0",
-    "@uqds/pagination": "^1.0.0-alpha.0",
-    "@uqds/pane": "^1.0.0-alpha.3",
-    "@uqds/previous-next": "^1.0.0-alpha.0",
-    "@uqds/progression": "^1.0.0-alpha.0",
-    "@uqds/sections": "^1.0.0-alpha.0",
-    "@uqds/side-nav": "^1.0.0-alpha.0",
-    "@uqds/site-header": "^4.0.0-alpha.0",
-    "@uqds/table": "^1.0.0-alpha.0",
-    "@uqds/tabs": "^1.0.0-alpha.0"
+    "@uqds/accordion": "^5.0.0",
+    "@uqds/alert": "^5.0.0",
+    "@uqds/blockquote": "^4.0.0",
+    "@uqds/body": "^2.0.0",
+    "@uqds/breadcrumb": "^6.0.0",
+    "@uqds/button": "^2.0.0",
+    "@uqds/card": "^2.0.0",
+    "@uqds/core": "^3.0.0",
+    "@uqds/footer": "^5.0.0",
+    "@uqds/footer-legacy": "^2.0.0",
+    "@uqds/form": "^2.0.0",
+    "@uqds/grid": "^2.0.0",
+    "@uqds/grid-menu": "^2.0.0",
+    "@uqds/header": "^5.0.0",
+    "@uqds/header-legacy": "^2.0.0",
+    "@uqds/hero": "^5.0.0",
+    "@uqds/icon": "^2.0.0",
+    "@uqds/layout": "^5.0.0",
+    "@uqds/lists": "^2.0.0",
+    "@uqds/loading-spinner": "^2.0.0",
+    "@uqds/navigation": "^5.0.0",
+    "@uqds/page-header": "^2.0.0",
+    "@uqds/pagination": "^2.0.0",
+    "@uqds/pane": "^2.0.0",
+    "@uqds/previous-next": "^2.0.0",
+    "@uqds/progression": "^2.0.0",
+    "@uqds/sections": "^2.0.0",
+    "@uqds/side-nav": "^2.0.0",
+    "@uqds/site-header": "^5.0.0",
+    "@uqds/table": "^2.0.0",
+    "@uqds/tabs": "^2.0.0"
   }
 }
