--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-html",
-  "version": "4.0.0-alpha.8",
+  "version": "5.0.0",
   "description": "Storybook for HTML instance for uqds component development",
   "private": true,
   "main": "index.js",
@@ -35,41 +35,41 @@
     "@storybook/manager-api": "^8.4.2",
     "@storybook/test-runner": "^0.19.1",
     "@storybook/theming": "^8.4.2",
-    "@uqds/accordion": "^4.0.0-alpha.0",
-    "@uqds/alert": "^4.0.0-alpha.1",
-    "@uqds/app-maps": "^1.0.0-alpha.0",
-    "@uqds/blockquote": "^3.0.0-alpha.0",
-    "@uqds/body": "^1.0.0-alpha.0",
-    "@uqds/breadcrumb": "^5.0.0-alpha.0",
-    "@uqds/button": "^1.0.0-alpha.0",
-    "@uqds/card": "^1.0.0-alpha.3",
-    "@uqds/core": "^2.0.0-alpha.0",
-    "@uqds/footer": "^4.0.0-alpha.0",
-    "@uqds/footer-legacy": "^1.0.0-alpha.0",
-    "@uqds/form": "^1.0.0-alpha.0",
-    "@uqds/grid": "^1.0.0-alpha.0",
-    "@uqds/grid-menu": "^1.0.0-alpha.0",
-    "@uqds/header": "^4.0.0-alpha.0",
-    "@uqds/header-legacy": "^1.0.0-alpha.0",
-    "@uqds/hero": "^4.0.0-alpha.0",
-    "@uqds/icon": "^1.0.0-alpha.0",
-    "@uqds/image": "^3.0.0-alpha.1",
-    "@uqds/layout": "^4.0.0-alpha.3",
-    "@uqds/lists": "^1.0.0-alpha.0",
-    "@uqds/loading-spinner": "^1.0.0-alpha.0",
-    "@uqds/navigation": "^4.0.0-alpha.0",
-    "@uqds/page-header": "^1.0.0-alpha.0",
-    "@uqds/pagination": "^1.0.0-alpha.0",
-    "@uqds/pane": "^1.0.0-alpha.3",
-    "@uqds/pill": "^3.0.0-alpha.0",
-    "@uqds/previous-next": "^1.0.0-alpha.0",
-    "@uqds/progression": "^1.0.0-alpha.0",
-    "@uqds/sections": "^1.0.0-alpha.0",
-    "@uqds/side-nav": "^1.0.0-alpha.0",
-    "@uqds/site-header": "^4.0.0-alpha.0",
-    "@uqds/social": "^3.0.0-alpha.2",
-    "@uqds/table": "^1.0.0-alpha.0",
-    "@uqds/tabs": "^1.0.0-alpha.0",
+    "@uqds/accordion": "^5.0.0",
+    "@uqds/alert": "^5.0.0",
+    "@uqds/app-maps": "^2.0.0",
+    "@uqds/blockquote": "^4.0.0",
+    "@uqds/body": "^2.0.0",
+    "@uqds/breadcrumb": "^6.0.0",
+    "@uqds/button": "^2.0.0",
+    "@uqds/card": "^2.0.0",
+    "@uqds/core": "^3.0.0",
+    "@uqds/footer": "^5.0.0",
+    "@uqds/footer-legacy": "^2.0.0",
+    "@uqds/form": "^2.0.0",
+    "@uqds/grid": "^2.0.0",
+    "@uqds/grid-menu": "^2.0.0",
+    "@uqds/header": "^5.0.0",
+    "@uqds/header-legacy": "^2.0.0",
+    "@uqds/hero": "^5.0.0",
+    "@uqds/icon": "^2.0.0",
+    "@uqds/image": "^4.0.0",
+    "@uqds/layout": "^5.0.0",
+    "@uqds/lists": "^2.0.0",
+    "@uqds/loading-spinner": "^2.0.0",
+    "@uqds/navigation": "^5.0.0",
+    "@uqds/page-header": "^2.0.0",
+    "@uqds/pagination": "^2.0.0",
+    "@uqds/pane": "^2.0.0",
+    "@uqds/pill": "^4.0.0",
+    "@uqds/previous-next": "^2.0.0",
+    "@uqds/progression": "^2.0.0",
+    "@uqds/sections": "^2.0.0",
+    "@uqds/side-nav": "^2.0.0",
+    "@uqds/site-header": "^5.0.0",
+    "@uqds/social": "^4.0.0",
+    "@uqds/table": "^2.0.0",
+    "@uqds/tabs": "^2.0.0",
     "babel-loader": "^9.2.1",
     "core-js": "^3.39.0",
     "font-awesome": "^4.7.0",
