--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/tabs",
-  "version": "1.0.0-alpha.0",
+  "version": "2.0.0",
   "description": "The tabs component package",
   "keywords": [
     "uqds",
@@ -51,6 +51,6 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^2.0.0-alpha.0"
+    "@uqds/core": "^3.0.0"
   }
 }
