chore(release):Publish
 - @uqds/accordion@6.0.0-alpha.0
 - @uqds/alert@6.0.0-alpha.0
 - @uqds/app-maps@3.0.0-alpha.0
 - @uqds/blockquote@5.0.0-alpha.0
 - @uqds/body@3.0.0-alpha.0
 - @uqds/breadcrumb@7.0.0-alpha.0
 - @uqds/button@3.0.0-alpha.0
 - @uqds/card@3.0.0-alpha.0
 - @uqds/core@4.0.0-alpha.0
 - @uqds/footer@6.0.0-alpha.0
 - @uqds/footer-legacy@3.0.0-alpha.0
 - @uqds/form@3.0.0-alpha.0
 - @uqds/grid@3.0.0-alpha.0
 - @uqds/grid-menu@3.0.0-alpha.0
 - @uqds/header@6.0.0-alpha.0
 - @uqds/header-legacy@3.0.0-alpha.0
 - @uqds/hero@6.0.0-alpha.0
 - @uqds/icon@3.0.0-alpha.0
 - @uqds/image@5.0.0-alpha.0
 - @uqds/layout@6.0.0-alpha.0
 - @uqds/lists@3.0.0-alpha.0
 - @uqds/loading-spinner@3.0.0-alpha.0
 - @uqds/navigation@6.0.0-alpha.0
 - @uqds/page-header@3.0.0-alpha.0
 - @uqds/pagination@3.0.0-alpha.0
 - @uqds/pane@3.0.0-alpha.0
 - @uqds/pill@5.0.0-alpha.0
 - @uqds/previous-next@3.0.0-alpha.0
 - private-design-output@3.0.0-alpha.0
 - @uqds/progression@3.0.0-alpha.0
 - @uqds/sections@3.0.0-alpha.0
 - @uqds/side-nav@3.0.0-alpha.0
 - @uqds/site-header@6.0.0-alpha.0
 - @uqds/social@5.0.0-alpha.0
 - storybook-html@6.0.0-alpha.0
 - @uqds/table@3.0.0-alpha.0
 - @uqds/tabs@3.0.0-alpha.0

--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/footer",
-  "version": "5.0.0",
+  "version": "6.0.0-alpha.0",
   "description": "The POC UQ footer component package",
   "keywords": [
     "uqds",
@@ -37,10 +37,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/accordion": "^5.0.0",
-    "@uqds/core": "^3.0.0",
-    "@uqds/grid": "^2.0.0",
-    "@uqds/icon": "^2.0.0"
+    "@uqds/accordion": "^6.0.0-alpha.0",
+    "@uqds/core": "^4.0.0-alpha.0",
+    "@uqds/grid": "^3.0.0-alpha.0",
+    "@uqds/icon": "^3.0.0-alpha.0"
   },
   "devDependencies": {
     "gulp": "^5.0.0"
