--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/button",
-  "version": "2.0.0",
+  "version": "3.0.0-alpha.0",
   "description": "The button component package",
   "keywords": [
     "uqds",
@@ -51,7 +51,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^3.0.0",
+    "@uqds/core": "^4.0.0-alpha.0",
     "copy-to-clipboard": "^3.3.3"
   }
 }
