--- a/packages/header-legacy/package.json
+++ b/packages/header-legacy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header-legacy",
-  "version": "2.0.0",
+  "version": "3.0.0-alpha.0",
   "description": "Header component",
   "private": true,
   "keywords": [
@@ -35,8 +35,8 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^3.0.0",
-    "@uqds/grid": "^2.0.0",
-    "@uqds/icon": "^2.0.0"
+    "@uqds/core": "^4.0.0-alpha.0",
+    "@uqds/grid": "^3.0.0-alpha.0",
+    "@uqds/icon": "^3.0.0-alpha.0"
   }
 }
