--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/header",
-  "version": "5.0.0",
+  "version": "6.0.0-alpha.0",
   "description": "The POC UQ Header component package",
   "keywords": [
     "uqds",
@@ -37,10 +37,10 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^3.0.0",
-    "@uqds/form": "^2.0.0",
-    "@uqds/grid": "^2.0.0",
-    "@uqds/icon": "^2.0.0"
+    "@uqds/core": "^4.0.0-alpha.0",
+    "@uqds/form": "^3.0.0-alpha.0",
+    "@uqds/grid": "^3.0.0-alpha.0",
+    "@uqds/icon": "^3.0.0-alpha.0"
   },
   "devDependencies": {
     "gulp": "^5.0.0"
