--- a/packages/private-design-output/package.json
+++ b/packages/private-design-output/package.json
@@ -1,6 +1,6 @@
 {
   "name": "private-design-output",
-  "version": "2.0.0",
+  "version": "3.0.0-alpha.0",
   "description": "Render style kits for UQ clients",
   "private": true,
   "author": {
@@ -29,36 +29,36 @@
     "gulp": "^5.0.0"
   },
   "dependencies": {
-    "@uqds/accordion": "^5.0.0",
-    "@uqds/alert": "^5.0.0",
-    "@uqds/blockquote": "^4.0.0",
-    "@uqds/body": "^2.0.0",
-    "@uqds/breadcrumb": "^6.0.0",
-    "@uqds/button": "^2.0.0",
-    "@uqds/card": "^2.0.0",
-    "@uqds/core": "^3.0.0",
-    "@uqds/footer": "^5.0.0",
-    "@uqds/footer-legacy": "^2.0.0",
-    "@uqds/form": "^2.0.0",
-    "@uqds/grid": "^2.0.0",
-    "@uqds/grid-menu": "^2.0.0",
-    "@uqds/header": "^5.0.0",
-    "@uqds/header-legacy": "^2.0.0",
-    "@uqds/hero": "^5.0.0",
-    "@uqds/icon": "^2.0.0",
-    "@uqds/layout": "^5.0.0",
-    "@uqds/lists": "^2.0.0",
-    "@uqds/loading-spinner": "^2.0.0",
-    "@uqds/navigation": "^5.0.0",
-    "@uqds/page-header": "^2.0.0",
-    "@uqds/pagination": "^2.0.0",
-    "@uqds/pane": "^2.0.0",
-    "@uqds/previous-next": "^2.0.0",
-    "@uqds/progression": "^2.0.0",
-    "@uqds/sections": "^2.0.0",
-    "@uqds/side-nav": "^2.0.0",
-    "@uqds/site-header": "^5.0.0",
-    "@uqds/table": "^2.0.0",
-    "@uqds/tabs": "^2.0.0"
+    "@uqds/accordion": "^6.0.0-alpha.0",
+    "@uqds/alert": "^6.0.0-alpha.0",
+    "@uqds/blockquote": "^5.0.0-alpha.0",
+    "@uqds/body": "^3.0.0-alpha.0",
+    "@uqds/breadcrumb": "^7.0.0-alpha.0",
+    "@uqds/button": "^3.0.0-alpha.0",
+    "@uqds/card": "^3.0.0-alpha.0",
+    "@uqds/core": "^4.0.0-alpha.0",
+    "@uqds/footer": "^6.0.0-alpha.0",
+    "@uqds/footer-legacy": "^3.0.0-alpha.0",
+    "@uqds/form": "^3.0.0-alpha.0",
+    "@uqds/grid": "^3.0.0-alpha.0",
+    "@uqds/grid-menu": "^3.0.0-alpha.0",
+    "@uqds/header": "^6.0.0-alpha.0",
+    "@uqds/header-legacy": "^3.0.0-alpha.0",
+    "@uqds/hero": "^6.0.0-alpha.0",
+    "@uqds/icon": "^3.0.0-alpha.0",
+    "@uqds/layout": "^6.0.0-alpha.0",
+    "@uqds/lists": "^3.0.0-alpha.0",
+    "@uqds/loading-spinner": "^3.0.0-alpha.0",
+    "@uqds/navigation": "^6.0.0-alpha.0",
+    "@uqds/page-header": "^3.0.0-alpha.0",
+    "@uqds/pagination": "^3.0.0-alpha.0",
+    "@uqds/pane": "^3.0.0-alpha.0",
+    "@uqds/previous-next": "^3.0.0-alpha.0",
+    "@uqds/progression": "^3.0.0-alpha.0",
+    "@uqds/sections": "^3.0.0-alpha.0",
+    "@uqds/side-nav": "^3.0.0-alpha.0",
+    "@uqds/site-header": "^6.0.0-alpha.0",
+    "@uqds/table": "^3.0.0-alpha.0",
+    "@uqds/tabs": "^3.0.0-alpha.0"
   }
 }
