--- a/packages/side-nav/package.json
+++ b/packages/side-nav/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uqds/side-nav",
-  "version": "2.0.0",
+  "version": "3.0.0-alpha.0",
   "description": "Side nav (title, side navigation)",
   "keywords": [
     "uqds",
@@ -40,7 +40,7 @@
     "url": "https://github.com/uq-its-ss/design-system/issues"
   },
   "dependencies": {
-    "@uqds/core": "^3.0.0",
-    "@uqds/icon": "^2.0.0"
+    "@uqds/core": "^4.0.0-alpha.0",
+    "@uqds/icon": "^3.0.0-alpha.0"
   }
 }
