fix: missing blockquote style export

--- a/packages/blockquote/package.json
+++ b/packages/blockquote/package.json
@@ -32,6 +32,7 @@
     "src/*",
     "dist/*"
   ],
+  "style": "dist/css/main.css",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/uq-its-ss/design-system.git"
