feat: add card components

--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "whatwg-fetch": "^3.6.20"
   },
   "scripts": {
-    "format": "prettier --write \"**/*.{css,scss,js,jsx,json,md,mdx}\"",
-    "lint": "prettier --check \"**/*.{css,scss,js,jsx,json,md,mdx}\" && npm run lint-js && npm run lint-css",
+    "format": "prettier --write \"**/*.{css,scss,js,jsx,json,md,mdx,tsx}\"",
+    "lint": "prettier --check \"**/*.{css,scss,js,jsx,json,md,mdx,tsx}\" && npm run lint-js && npm run lint-css",
     "lint-js": "eslint",
     "lint-css": "stylelint \"**/*.{css,scss}\"",
     "lint-fix": "npm run format && npm run lint-js -- --fix && npm run lint-css -- --fix",
