--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -20,13 +20,13 @@
     "@uqds/react": "^1.0.0-alpha.0"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "=8.4.2",
     "@storybook/addon-essentials": "^8.4.2",
     "@storybook/addon-interactions": "^8.4.2",
-    "@storybook/addon-onboarding": "^8.4.2",
-    "@storybook/addon-webpack5-compiler-swc": "^2.0.0",
+    "@storybook/addon-links": "=8.4.2",
     "@storybook/blocks": "^8.4.2",
     "@storybook/react": "^8.4.2",
-    "@storybook/react-webpack5": "^8.4.2",
+    "@storybook/react-vite": "^8.4.2",
     "@storybook/test": "^8.4.2",
     "storybook": "^8.4.2"
   }
