--- a/packages/storybook-html/package.json
+++ b/packages/storybook-html/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start": "npm run storybook",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "serve-storybook": "http-server storybook-static -i -p 6006"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -22,19 +23,19 @@
     "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
     "@material/circular-progress": "^14.0.0",
-    "@storybook/addon-a11y": "^8.4.2",
-    "@storybook/addon-essentials": "^8.4.2",
-    "@storybook/addon-interactions": "^8.4.2",
-    "@storybook/addon-links": "^8.4.2",
-    "@storybook/addon-mdx-gfm": "^8.4.2",
+    "@storybook/addon-a11y": "^8.5.2",
+    "@storybook/addon-essentials": "^8.5.2",
+    "@storybook/addon-interactions": "^8.5.2",
+    "@storybook/addon-links": "^8.5.2",
+    "@storybook/addon-mdx-gfm": "^8.5.2",
     "@storybook/addon-styling-webpack": "^1.0.1",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
-    "@storybook/blocks": "^8.4.2",
-    "@storybook/html": "^8.4.2",
-    "@storybook/html-webpack5": "^8.4.2",
-    "@storybook/manager-api": "^8.4.2",
+    "@storybook/blocks": "^8.5.2",
+    "@storybook/html": "^8.5.2",
+    "@storybook/html-webpack5": "^8.5.2",
+    "@storybook/manager-api": "^8.5.2",
     "@storybook/test-runner": "^0.19.1",
-    "@storybook/theming": "^8.4.2",
+    "@storybook/theming": "^8.5.2",
     "@uqds/accordion": "^6.0.0-alpha.0",
     "@uqds/alert": "^6.0.0-alpha.0",
     "@uqds/app-maps": "^3.0.0-alpha.0",
@@ -78,7 +79,7 @@
     "mermaid": "^11.4.0",
     "sass": "^1.80.6",
     "sass-loader": "^16.0.3",
-    "storybook": "^8.4.2",
+    "storybook": "^8.5.2",
     "tocbot": "^4.31.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.3",
