--- a/packages/storybook-react/package.json
+++ b/packages/storybook-react/package.json
@@ -13,21 +13,21 @@
   "scripts": {
     "start": "npm run storybook",
     "storybook": "storybook dev -p 6007",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "serve-storybook": "http-server storybook-static -i -p 6007"
   },
   "dependencies": {
     "@uqds/icon": "^3.0.0-alpha.0",
     "@uqds/react": "^1.0.0-alpha.0"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "=8.4.2",
-    "@storybook/addon-essentials": "^8.4.2",
-    "@storybook/addon-interactions": "^8.4.2",
-    "@storybook/addon-links": "=8.4.2",
-    "@storybook/blocks": "^8.4.2",
-    "@storybook/react": "^8.4.2",
-    "@storybook/react-vite": "^8.4.2",
-    "@storybook/test": "^8.4.2",
-    "storybook": "^8.4.2"
+    "@storybook/addon-a11y": "^8.5.2",
+    "@storybook/addon-essentials": "^8.5.2",
+    "@storybook/addon-interactions": "^8.5.2",
+    "@storybook/addon-links": "^8.5.2",
+    "@storybook/blocks": "^8.5.2",
+    "@storybook/react": "^8.5.2",
+    "@storybook/react-vite": "^8.5.2",
+    "storybook": "^8.5.2"
   }
 }
