updated ARN codes

--- a/.github/workflows/publish-sb.yml
+++ b/.github/workflows/publish-sb.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Configure AWS Credentials for Staging
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_TOOLS_PRODUCTION }}
           aws-region: ap-southeast-2
           role-session-name: GitHubActions-S3Sync-Staging-${{ github.run_id }}
 
@@ -52,7 +52,7 @@ jobs:
       - name: Configure AWS Credentials for Production
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_TOOLS_PRODUCTION }}
           aws-region: ap-southeast-2
           role-session-name: GitHubActions-S3Sync-Production-${{ github.run_id }}
 
