fix: update screenshot colour refernces

--- a/scripts/screenshot.config.json
+++ b/scripts/screenshot.config.json
@@ -1,5 +1,17 @@
 {
   "uris": {
+    "core-colour--brand": "http://localhost:6006/iframe.html?id=core-colour--brand",
+    "core-colour--text": "http://localhost:6006/iframe.html?id=core-colour--text",
+    "core-colour--link": "http://localhost:6006/iframe.html?id=core-colour--link",
+    "core-colour--neutral": "http://localhost:6006/iframe.html?id=core-colour--neutral",
+    "core-colour--status": "http://localhost:6006/iframe.html?id=core-colour--status",
+    "core-colour--purple": "http://localhost:6006/iframe.html?id=core-colour--purple",
+    "core-colour--grey": "http://localhost:6006/iframe.html?id=core-colour--grey",
+    "core-colour--blackandwhite": "http://localhost:6006/iframe.html?id=core-colour--blackandwhite",
+    "core-colour--utility": "http://localhost:6006/iframe.html?id=core-colour--utility",
+    "core-colour--error": "http://localhost:6006/iframe.html?id=core-colour--error",
+    "core-colour--warning": "http://localhost:6006/iframe.html?id=core-colour--warning",
+    "core-colour--success": "http://localhost:6006/iframe.html?id=core-colour--success",
     "layout-container--container": "http://localhost:6006/iframe.html?id=layout-container--container",
     "layout-page-layouts-sidebar--sidebar": "http://localhost:6006/iframe.html?id=layout-page-layouts-sidebar--sidebar",
     "layout-page-layouts-sidebar--local-nav-example": "http://localhost:6006/iframe.html?id=layout-page-layouts-sidebar--local-nav-example",
@@ -168,18 +180,6 @@
     "components-tabs--tabs-full-width": "http://localhost:6006/iframe.html?id=components-tabs--tabs-full-width",
     "components-tabs--tabs-small": "http://localhost:6006/iframe.html?id=components-tabs--tabs-small",
     "components-tabs--tabs-reversed": "http://localhost:6006/iframe.html?id=components-tabs--tabs-reversed",
-    "components-colour--brand": "http://localhost:6006/iframe.html?id=components-colour--brand",
-    "components-colour--text": "http://localhost:6006/iframe.html?id=components-colour--text",
-    "components-colour--link": "http://localhost:6006/iframe.html?id=components-colour--link",
-    "components-colour--neutral": "http://localhost:6006/iframe.html?id=components-colour--neutral",
-    "components-colour--status": "http://localhost:6006/iframe.html?id=components-colour--status",
-    "components-colour--purple": "http://localhost:6006/iframe.html?id=components-colour--purple",
-    "components-colour--grey": "http://localhost:6006/iframe.html?id=components-colour--grey",
-    "components-colour--blackandwhite": "http://localhost:6006/iframe.html?id=components-colour--blackandwhite",
-    "components-colour--utility": "http://localhost:6006/iframe.html?id=components-colour--utility",
-    "components-colour--error": "http://localhost:6006/iframe.html?id=components-colour--error",
-    "components-colour--warning": "http://localhost:6006/iframe.html?id=components-colour--warning",
-    "components-colour--success": "http://localhost:6006/iframe.html?id=components-colour--success",
     "components-lists--all": "http://localhost:6006/iframe.html?id=components-lists--all",
     "patterns-basic-page--basic-page": "http://localhost:6006/iframe.html?id=patterns-basic-page--basic-page",
     "patterns-form-validation--empty-form-submit-example": "http://localhost:6006/iframe.html?id=patterns-form-validation--empty-form-submit-example",
