--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@vitest/ui": "^2.1.4",
     "cli-progress": "^3.12.0",
+    "concurrently": "^9.1.2",
     "core-js": "^3.39.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
@@ -85,7 +86,9 @@
     "test-watch": "vitest",
     "update-screenshots": "node scripts/screenshot.js",
     "reg-suit": "reg-suit run",
-    "serve-screenshots": "http-server dist -i -p 6006"
+    "storybook-html": "cd packages/storybook-html && npm run storybook",
+    "storybook-email": "cd packages/storybook-email && npm run serve-storybook",
+    "storybook": "concurrently -k -n \"HTML,EMAIL\" -c \"#636cff,#ff4785\" \"wait-on tcp:6006 && npm run storybook-html\" \"wait-on tcp:6008 && npm run storybook-email\""
   },
   "engines": {
     "node": ">=18",
